tests/rustdoc-ui/intra-doc/feature-gate-intra-doc-pointers.rs
//! [pointer::add]
//~^ ERROR: experimental
//! [pointer::wrapping_add]
//~^ ERROR: experimental
//! [pointer] // This is explicitly allowed
//! [reference] // This is explicitly allowed
